# therapy-notes-manager

./: .openmemory  AI_CONTINUATION_SCRIPT.txt  AI_script.txt  MAIN_README.md  PANDA_SYSTEM_v3.md  README.md  START_AI_DEVELOPMENT.txt  TherapyNotesManager.spec  build.py  build_exee_script.txt  create_dist.bat  create_installer.bat  logging.conf  main.spec  pyproject.toml  requirements.txt  run.bat  run.sh  run.spec  setup.py
.ai-agents/: enforcement-status.json  project-state.json
.github/actions/openmemory-setup/: action.yml
.github/workflows/: openmemory-auto-init.yml  openmemory-enforcement.yml
data/config/: custom_fields.json  default_settings.json  default_templates.json
data/schemas/: chapter_schema.json  content_schema.json  workbook_index_schema.json  workbook_schema.json
data/templates/: Default Education Note.json  default_education_note.json  default_therapy_note.json
data/workbooks/: example_dwc_workbook.json
metadata/src/: main.metadata.md
metadata/src/gui/: main_window.metadata.md
panda/: config.json
panda/templates/: metadata.md
src/: main.py
src/core/: client_manager.py  config_manager.py  custom_fields_manager.py  group_manager.py  help_manager.py  import_manager.py  notes_engine.py  session_manager.py  template_manager.py  workbook_manager.py
src/data/: file_parser.py  json_handler.py  schemas.py
src/gui/: main_window.py  styles.py
src/models/: chapter.py  client.py  custom_field.py  group.py  note_template.py  session.py  settings.py  workbook.py
src/security/: encryption.py
src/utils/: paths.py  tooltips.py
(+32 files in other folders)
